--- a/backend/src/TelegramBot.API/Dockerfile.original
+++ b/backend/src/TelegramBot.API/Dockerfile.original
@@ -1,7 +1,7 @@
 # См. статью по ссылке https://aka.ms/customizecontainer, чтобы узнать как настроить контейнер отладки и как Visual Studio использует этот Dockerfile для создания образов для ускорения отладки.
 
 # Этот этап используется при запуске из VS в быстром режиме (по умолчанию для конфигурации отладки)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
 USER app
 WORKDIR /app
 
@@ -10,10 +10,10 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/TelegramBot.API/TelegramBot.API.csproj", "src/TelegramBot.API/"]
-RUN dotnet restore "./src/TelegramBot.API/TelegramBot.API.csproj"
+COPY ["TelegramBot.API.csproj", "."]
+RUN dotnet restore "./TelegramBot.API.csproj"
 COPY . .
-WORKDIR "/src/src/TelegramBot.API"
+WORKDIR "/src/."
 RUN dotnet build "./TelegramBot.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Этот этап используется для публикации проекта службы, который будет скопирован на последний этап
