--- a/backend/src/TelegramBot.API/TelegramBot.API.csproj
+++ b/backend/src/TelegramBot.API/TelegramBot.API.csproj
@@ -6,10 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TelegramBot.API-159b720d-6043-4807-9d2e-6114e6f456c6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Telegram.Bot" Version="22.2.0" />
   </ItemGroup>
 </Project>
