--- a/backend/src/TelegramBot.API/TelegramBot.API.csproj
+++ b/backend/src/TelegramBot.API/TelegramBot.API.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TelegramBot.API-159b720d-6043-4807-9d2e-6114e6f456c6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
