--- a/frontend/AscensionApp/package.json
+++ b/frontend/AscensionApp/package.json
@@ -9,32 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bdub/reactnative-sprite-animator": "^1.0.2",
     "@expo-google-fonts/press-start-2p": "^0.2.3",
     "@react-navigation/drawer": "^7.1.1",
     "axios": "^1.7.7",
-    "expo": "~52.0.23",
-    "expo-app-loading": "^2.1.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
+    "expo": "^52.0.25",
+    "expo-constants": "~17.0.4",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-status-bar": "~2.0.1",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "react-native-particles": "^0.0.8",
     "react-native-reanimated": "~3.16.1",
-    "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
