--- a/frontend/AscensionApp/package.json
+++ b/frontend/AscensionApp/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bdub/reactnative-sprite-animator": "^1.0.2",
     "@expo-google-fonts/press-start-2p": "^0.2.3",
     "@react-navigation/drawer": "^7.1.1",
     "axios": "^1.7.7",
@@ -20,13 +19,14 @@
     "expo-router": "~4.0.16",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "~14.0.1",
+    "moti": "^0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-particles": "^0.0.8",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
