Создал основные сущности

--- a/backend/src/AscensionApp.CORE/AscensionApp.CORE.csproj
+++ b/backend/src/AscensionApp.CORE/AscensionApp.CORE.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\Auth\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
