в гугл не работал порт 6000... Это очень странно (он не был занят, проблема в гугл) не делается миграция по приколу :d

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ POSTGRES_DB=userservicedb
 
 DB_HOST=userservice.db
 DB_PORT=5432
-DB_CONNECTION=User ID=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Host=${DB_HOST};Port=${DB_PORT};Database=${POSTGRES_DB}
+DB_CONNECTION=User ID=postgres;Password=123;Host=userservice.db;Port=5432;Database=userservicedb
 
 PGADMIN_DEFAULT_EMAIL=den.darknezz@gmail.com
 PGADMIN_DEFAULT_PASSWORD=123
