--- a/backend/src/UserService/UserService.API/appsettings.Development.json
+++ b/backend/src/UserService/UserService.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  {
+    "ConnectionStrings": {
+      "UserServiceDbContext": "User ID=postgres;Password=123;Host=userservice.db;Port=5432;Database=userservicedb"
+    }
   }
+
 }
