Настроил docker-compose, миграцию выполнил выделил сущности разобраться с Factory мб, чтобы ef migrations из .env тянуло надо репы сделать

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123
-POSTGRES_DB=userservicedb
+POSTGRES_DB_1=userservicedb
+POSTGRES_DB_2=gameservicedb
 
-DB_HOST=userservice.db
-DB_PORT=5432
-DB_CONNECTION=User ID=postgres;Password=123;Host=userservice.db;Port=5432;Database=userservicedb
+DB_CONNECTION_USERSERVICE=User ID=postgres;Password=123;Host=userservice.db;Port=5432;Database=userservicedb
+DB_CONNECTION_GAMESERVICE=User ID=postgres;Password=123;Host=gameservice.db;Port=5432;Database=gameservicedb
 
 PGADMIN_DEFAULT_EMAIL=den.darknezz@gmail.com
 PGADMIN_DEFAULT_PASSWORD=123
