--- a/backend/src/GameService/GameService.API/appsettings.Development.json
+++ b/backend/src/GameService/GameService.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GameServiceDbContext": "User ID=postgres;Password=123;Host=localhost;Port=5433;Database=gameservicedb"
   }
 }
