Разбирался как с Command/Queries работать. На Character работает.

--- a/backend/src/GameService/GameService.API/GameService.API.csproj
+++ b/backend/src/GameService/GameService.API/GameService.API.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GameService.Application\GameService.Application.csproj" />
     <ProjectReference Include="..\GameService.Data\GameService.Data.csproj" />
   </ItemGroup>
 
