Сделал абстрактный репозиторий, чтобы основные данные CRUD не писать каждый раз

--- a/backend/src/GameService/GameService.API/GameService.API.csproj
+++ b/backend/src/GameService/GameService.API/GameService.API.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\GameService.Data\GameService.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\Team\" />
+    <Folder Include="Contracts\User\" />
+    <Folder Include="Contracts\UserCharacter\" />
+  </ItemGroup>
+
 </Project>
