--- a/backend/src/GameService/GameService.Application/GameService.Application.csproj
+++ b/backend/src/GameService/GameService.Application/GameService.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
     <PackageReference Include="Scrutor" Version="6.0.1" />
   </ItemGroup>
