--- a/frontend/AscensionApp/package.json
+++ b/frontend/AscensionApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/press-start-2p": "^0.2.3",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.1.1",
     "axios": "^1.7.7",
     "expo": "^52.0.25",
